--- a/WoldCupApp18/src/Views/FXMLDetailsAdd.fxml
+++ b/WoldCupApp18/src/Views/FXMLDetailsAdd.fxml
@@ -4,12 +4,30 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLDetailsAddController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLDetailsAddController">
    <children>
-      <Label fx:id="title" layoutX="172.0" layoutY="28.0" text="Label" />
-      <Label fx:id="desc" layoutX="172.0" layoutY="249.0" text="Label" />
+      <Label fx:id="title" layoutX="172.0" layoutY="37.0" text="Label" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Label fx:id="desc" layoutX="172.0" layoutY="249.0" text="Label" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
       <ImageView fx:id="img" fitHeight="150.0" fitWidth="200.0" layoutX="86.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="previous" layoutX="432.0" layoutY="254.0" mnemonicParsing="false" onAction="#previousDetails" text="Retour aux articles" />
+      <Button fx:id="previous" layoutX="432.0" layoutY="254.0" mnemonicParsing="false" onAction="#previousDetails" text="Back to articles" />
+      <Text fill="#e41212" layoutX="421.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Article">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
+      <Text fill="#e41212" layoutX="422.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="added">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
