--- a/WoldCupApp18/src/Views/FXMLCreate.fxml
+++ b/WoldCupApp18/src/Views/FXMLCreate.fxml
@@ -1,34 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="595.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLCreateController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="354.0" style="-fx-background-color: #353b48;" stylesheets="@../CSS/GroupStage.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLCreateController">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <TextField fx:id="name" layoutX="245.0" layoutY="33.0" />
-      <TextField fx:id="lastname" layoutX="245.0" layoutY="71.0" />
-      <TextField fx:id="nationality" layoutX="245.0" layoutY="161.0" />
-      <TextField fx:id="email" layoutX="245.0" layoutY="204.0" />
-      <TextField fx:id="tel" layoutX="245.0" layoutY="249.0" />
-      <TextField fx:id="login" layoutX="245.0" layoutY="298.0" />
-      <TextField fx:id="password" layoutX="246.0" layoutY="343.0" />
-      <PasswordField fx:id="password2" layoutX="246.0" layoutY="385.0" />
-      <ChoiceBox fx:id="team" layoutX="245.0" layoutY="423.0" prefWidth="150.0" />
-      <Label layoutX="50.0" layoutY="37.0" text="prenom:" />
-      <Label layoutX="52.0" layoutY="75.0" text="nom:" />
-      <Label layoutX="52.0" layoutY="120.0" text="date de naissance:" />
-      <Label layoutX="55.0" layoutY="165.0" text="nationalite:" />
-      <Label layoutX="56.0" layoutY="208.0" text="email:" />
-      <Label layoutX="52.0" layoutY="253.0" prefHeight="17.0" prefWidth="97.0" text="numero de telephone:" />
-      <Label layoutX="56.0" layoutY="302.0" text="identifiant:" />
-      <Label layoutX="56.0" layoutY="347.0" text="mot de passe:" />
-      <Label layoutX="57.0" layoutY="427.0" text="equipe preferee:" />
-      <Button fx:id="save" layoutX="141.0" layoutY="490.0" mnemonicParsing="false" onAction="#addd" text="ajouter" />
-      <Label layoutX="56.0" layoutY="389.0" prefHeight="17.0" prefWidth="169.0" text="confirmation du mot de passe:" />
-      <DatePicker fx:id="birthday" layoutX="245.0" layoutY="116.0" prefHeight="25.0" prefWidth="149.0" />
+      <VBox layoutX="77.0" layoutY="19.0" prefHeight="446.0" prefWidth="208.0">
+         <children>
+            <Label styleClass="Label" stylesheets="@../CSS/GroupStage.css" text="Name" />
+            <TextField fx:id="lastname" />
+            <Label text="Last Name" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="name" />
+            <Label text="Birthday" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="birthday" prefHeight="27.0" prefWidth="271.0" />
+            <Label text="Nationality" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="nationality" />
+            <Label text="Email" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="email" />
+            <Label prefHeight="17.0" prefWidth="97.0" text="Phone" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="tel" />
+            <Label text="Pseudo" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="login" />
+            <Label text="Password" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="password" />
+            <Label prefHeight="17.0" prefWidth="169.0" text="Retype Password " textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <PasswordField fx:id="password2" prefHeight="2.0" prefWidth="100.0" />
+            <Label text="Favorite Team" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ChoiceBox fx:id="team" prefWidth="150.0" />
+         </children>
+      </VBox>
+      <Button layoutX="195.0" layoutY="544.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #c23616;" text="Cancel" textFill="WHITE" />
+      <Button fx:id="save" layoutX="74.0" layoutY="544.0" mnemonicParsing="false" onAction="#addd" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #c23616;" text="Sign Up" textFill="WHITE" />
     </children>
 </AnchorPane>
