--- a/WoldCupApp18/src/Views/FXMLHome.fxml
+++ b/WoldCupApp18/src/Views/FXMLHome.fxml
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLHomeController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="840.0" style="-fx-background-color: #353b48;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="Controllers.FXMLHomeController">
+   <children>
+      <Label layoutX="253.0" layoutY="45.0" prefHeight="51.0" prefWidth="178.0" text="Welcome" textFill="#f8f8f8">
+         <font>
+            <Font name="System Bold" size="34.0" />
+         </font>
+      </Label>
+      <Label fx:id="userwelcome" layoutX="429.0" layoutY="51.0" text="Idriss" textFill="#f8f8f8">
+         <font>
+            <Font name="System Italic" size="34.0" />
+         </font>
+      </Label>
+      <Label layoutX="536.0" layoutY="49.0" text=":)" textFill="#f8f8f8">
+         <font>
+            <Font name="System Italic" size="34.0" />
+         </font>
+      </Label>
+      <Pane layoutX="111.0" layoutY="130.0" prefHeight="266.0" prefWidth="622.0" style="-fx-background-color: white;" />
+      <Text fill="WHITE" layoutX="46.0" layoutY="473.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Feel the football vibes and follow your team through World Cup App 18'">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Text>
+   </children>
 </AnchorPane>
