--- a/WoldCupApp18/src/Views/FXMLShowMatchUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLShowMatchUser.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="840.0" style="-fx-background-color: #40739e;" styleClass="pane" stylesheets="@../CSS/GroupStage.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowMatchUserController">
+<AnchorPane id="AnchorPane" fx:id="pg" prefHeight="515.0" prefWidth="840.0" style="-fx-background-color: #353b48; -fx-border-width: 0;" styleClass="pane" stylesheets="@../CSS/GroupStage.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLShowMatchUserController">
    <children>
       <ScrollPane fx:id="scrollpane" layoutX="23.0" layoutY="147.0" prefHeight="306.0" prefWidth="798.0">
          <content>
@@ -804,12 +804,12 @@
             </AnchorPane>
          </content>
       </ScrollPane>
-      <Label layoutX="317.0" layoutY="28.0" text="Group Stage">
+      <Label layoutX="317.0" layoutY="28.0" text="Group Stage" textFill="#50a2ff">
          <font>
             <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <Text fill="#c9c9c9" layoutX="247.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Click on a match to view details">
+      <Text fill="WHITE" layoutX="247.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Click on a match to view details">
          <font>
             <Font size="24.0" />
          </font>
