--- a/WoldCupApp18/src/Views/FXMLUserinterface.fxml
+++ b/WoldCupApp18/src/Views/FXMLUserinterface.fxml
@@ -4,77 +4,103 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLUserinterfaceController">
+<AnchorPane id="AnchorPane" fx:id="Main" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLUserinterfaceController">
    <children>
-      <AnchorPane layoutY="86.0" prefHeight="515.0" prefWidth="160.0">
+      <AnchorPane layoutY="83.0" prefHeight="518.0" prefWidth="162.0" style="-fx-background-color: white;">
          <children>
-            <JFXButton fx:id="bntAccomodation" layoutY="260.0" onAction="#accomodation" prefHeight="65.0" prefWidth="160.0" text="Accomodation" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="teams" layoutY="195.0" onAction="#teams" prefHeight="65.0" prefWidth="160.0" text="Teams" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="bntStat" layoutY="449.0" onAction="#statPlayer" prefHeight="65.0" prefWidth="160.0" text="Statistics" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="home" onAction="#homePage" prefHeight="65.0" prefWidth="160.0" text="Home" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="bntGame" layoutY="65.0" onAction="#games" prefHeight="65.0" prefWidth="160.0" text="Games" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="bntGroups" layoutY="130.0" onAction="#groups" prefHeight="65.0" prefWidth="160.0" text="Groups" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="bntStream" layoutY="384.0" onAction="#stream" prefHeight="65.0" prefWidth="160.0" text="Live Stream" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="bntArticle" layoutY="325.0" onAction="#article" prefHeight="65.0" prefWidth="160.0" text="Articles" textFill="#b40404">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
-            </JFXButton>
+            <VBox prefHeight="515.0" prefWidth="162.0">
+               <children>
+                  <JFXButton fx:id="home" onAction="#homePage" prefHeight="62.0" prefWidth="162.0" text="Home" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="bntGame" onAction="#games" prefHeight="65.0" prefWidth="177.0" text="Games" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="teams" onAction="#teams" prefHeight="65.0" prefWidth="210.0" text="Teams" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="bntGroups" onAction="#groups" prefHeight="65.0" prefWidth="185.0" text="Groups" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="bntArticle" onAction="#article" prefHeight="65.0" prefWidth="216.0" text="Articles" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="bntStat" onAction="#statPlayer" prefHeight="65.0" prefWidth="208.0" text="Statistics" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="btnevents" onAction="#article" prefHeight="65.0" prefWidth="216.0" text="Events" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="bntAccomodation" onAction="#accomodation" prefHeight="64.0" prefWidth="170.0" text="Accomodation" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="bntStream" onAction="#stream" prefHeight="65.0" prefWidth="211.0" text="Live Stream" textFill="#b40404">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="85.0" prefWidth="1000.0">
+      <AnchorPane fx:id="panePrincipale" layoutX="162.0" layoutY="86.0" prefHeight="515.0" prefWidth="840.0" style="-fx-background-color: #353b48;" />
+      <AnchorPane layoutX="-1.0" prefHeight="87.0" prefWidth="1000.0" style="-fx-background-image: red;">
          <children>
-            <ImageView fitHeight="85.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="120.0" fitWidth="1000.0" layoutX="1.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Resources/Icons/240_F_117668333_mWeTK3kSI4wyncp1EnsOyXwCrM6IJBdw.jpg" />
+                  <Image url="@../Resources/home/Sans%20titre%20-%201-01-01.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="73.0" fitWidth="77.0" layoutX="43.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="85.0" fitWidth="110.0" layoutX="20.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Resources/Icons/58430032a6515b1e0ad75b3f.png" />
+                  <Image url="@../Resources/a.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="953.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="logout" fitHeight="40.0" fitWidth="40.0" layoutX="868.0" layoutY="21.0" onDragDetected="#logout" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="bouton_modif" fitHeight="40.0" fitWidth="40.0" layoutX="793.0" layoutY="22.0" onDragDetected="#updateUserDetails" pickOnBounds="true" preserveRatio="true" />
-            <Text fill="WHITE" layoutX="689.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="About...">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Text>
+            <HBox layoutX="764.0" layoutY="22.0" prefHeight="43.0" prefWidth="165.0" spacing="20.0">
+               <children>
+                  <ImageView fx:id="MyAccount" fitHeight="40.0" fitWidth="40.0" onDragDetected="#updateUserDetails" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Resources/home/account_circle_white_192x192.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="Logout" fitHeight="40.0" fitWidth="40.0" onDragDetected="#logout" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Resources/home/logout.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="About" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Resources/home/help.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="Exit" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#Exit" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Resources/home/jiklbevwvhnewzmcnvud.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="panePrincipale" layoutX="149.0" layoutY="86.0" prefHeight="515.0" prefWidth="840.0" />
    </children>
 </AnchorPane>
