--- a/WoldCupApp18/src/Views/FXMLHome.fxml
+++ b/WoldCupApp18/src/Views/FXMLHome.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="840.0" style="-fx-background-color: #353b48;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="Controllers.FXMLHomeController">
+<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="840.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLHomeController">
    <children>
       <Label layoutX="253.0" layoutY="45.0" prefHeight="51.0" prefWidth="178.0" text="Welcome" textFill="#f8f8f8">
          <font>
@@ -24,7 +24,10 @@
             <Font name="System Italic" size="34.0" />
          </font>
       </Label>
-      <Pane layoutX="111.0" layoutY="130.0" prefHeight="266.0" prefWidth="622.0" style="-fx-background-color: white;" />
+      <Pane layoutX="156.0" layoutY="129.0" prefHeight="300.0" prefWidth="539.0" style="-fx-background-color: white;">
+         <children>
+            <MediaView fx:id="media" fitHeight="300.0" fitWidth="539.0" />
+         </children></Pane>
       <Text fill="WHITE" layoutX="46.0" layoutY="473.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Feel the football vibes and follow your team through World Cup App 18'">
          <font>
             <Font size="22.0" />
