--- a/WoldCupApp18/src/Views/FXMLUserStation.fxml
+++ b/WoldCupApp18/src/Views/FXMLUserStation.fxml
@@ -29,7 +29,7 @@
       <TextField fx:id="XMAP" layoutX="211.0" layoutY="449.0" promptText="Latitude" visible="false" />
       <TextField fx:id="YMAP" layoutX="211.0" layoutY="484.0" promptText="Longtitude" visible="false" />
 
-      <Button fx:id="Map" layoutX="456.0" layoutY="103.0" mnemonicParsing="false" onAction="#AfficherMap" text="Show MAA" />
+      <Button fx:id="Map" layoutX="456.0" layoutY="103.0" mnemonicParsing="false" onAction="#AfficherMap" text="Show MAP" />
       <Button fx:id="home" layoutX="32.0" layoutY="14.0" mnemonicParsing="false" onAction="#SwitchToHome" text="Home" />
 
       <Label layoutX="227.0" layoutY="27.0" text="Stations List" textFill="#f2f2f2">
