--- a/WoldCupApp18/src/Views/FXMLadminInterface.fxml
+++ b/WoldCupApp18/src/Views/FXMLadminInterface.fxml
@@ -1,14 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLadminInterfaceController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLadminInterfaceController">
    <children>
-      <Button fx:id="gererusers" layoutX="14.0" layoutY="24.0" mnemonicParsing="false" onAction="#gererUsers" prefHeight="25.0" prefWidth="196.0" text="Gerer les comptes des utilisateurs" />
-      <Button fx:id="hotels" layoutX="14.0" layoutY="78.0" mnemonicParsing="false" onAction="#goToHotels" text="Hotels" />
+      <AnchorPane layoutY="86.0" prefHeight="515.0" prefWidth="160.0">
+         <children>
+            <JFXButton fx:id="bntAccomodation" layoutY="260.0" onAction="#accomodation" prefHeight="65.0" prefWidth="160.0" text="Stadiums" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="teams" layoutY="195.0" onAction="#teams" prefHeight="65.0" prefWidth="160.0" text="Teams" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="bntStat" layoutY="449.0" onAction="#statPlayer" prefHeight="65.0" prefWidth="160.0" text="Statistics" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="home" onAction="#homePage" prefHeight="65.0" prefWidth="160.0" text="Home" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="bntGame" layoutY="65.0" onAction="#games" prefHeight="65.0" prefWidth="160.0" text="Games" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="bntGroups" layoutY="130.0" onAction="#groups" prefHeight="65.0" prefWidth="160.0" text="Hotels" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="bntStream" layoutY="384.0" onAction="#stream" prefHeight="65.0" prefWidth="160.0" text="Stations" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="bntArticle" layoutY="325.0" onAction="#article" prefHeight="65.0" prefWidth="160.0" text="Articles" textFill="#b40404">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="85.0" prefWidth="1000.0">
+         <children>
+            <ImageView fitHeight="85.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Resources/Icons/240_F_117668333_mWeTK3kSI4wyncp1EnsOyXwCrM6IJBdw.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="73.0" fitWidth="77.0" layoutX="43.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Resources/Icons/58430032a6515b1e0ad75b3f.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="953.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="logout" fitHeight="40.0" fitWidth="40.0" layoutX="868.0" layoutY="21.0" onDragDetected="#logout" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="bouton_modif" fitHeight="40.0" fitWidth="40.0" layoutX="793.0" layoutY="22.0" onDragDetected="#updateUserDetails" pickOnBounds="true" preserveRatio="true" />
+            <Text fill="WHITE" layoutX="689.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="About...">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="panePrincipale" layoutX="149.0" layoutY="86.0" prefHeight="515.0" prefWidth="840.0" />
    </children>
 </AnchorPane>
