--- a/WoldCupApp18/src/Views/FXMLShowMatchUser.fxml
+++ b/WoldCupApp18/src/Views/FXMLShowMatchUser.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -814,5 +815,10 @@
             <Font size="24.0" />
          </font>
       </Text>
+      <Button layoutX="736.0" layoutY="80.0" mnemonicParsing="false" onAction="#back" style="-fx-background-color: #e84118;" text="Home" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
