--- a/WoldCupApp18/src/Views/FXMLadminInterface.fxml
+++ b/WoldCupApp18/src/Views/FXMLadminInterface.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLadminInterfaceController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLadminInterfaceController">
    <children>
       <AnchorPane layoutY="86.0" prefHeight="515.0" prefWidth="160.0">
          <children>
@@ -26,7 +21,7 @@
                   <Font name="System Bold" size="19.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="bntStat" layoutY="449.0" onAction="#statPlayer" prefHeight="65.0" prefWidth="160.0" text="Statistics" textFill="#b40404">
+            <JFXButton fx:id="bntStat" layoutY="449.0" onAction="#statPlayer" prefHeight="65.0" prefWidth="160.0" text="Players" textFill="#b40404">
                <font>
                   <Font name="System Bold" size="19.0" />
                </font>
@@ -72,10 +67,13 @@
             </ImageView>
             <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="953.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fx:id="logout" fitHeight="40.0" fitWidth="40.0" layoutX="868.0" layoutY="21.0" onDragDetected="#logout" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="bouton_modif" fitHeight="40.0" fitWidth="40.0" layoutX="793.0" layoutY="22.0" onDragDetected="#updateUserDetails" pickOnBounds="true" preserveRatio="true" />
-            <Text fill="WHITE" layoutX="689.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="About...">
+            <ImageView fx:id="bouton_modif" fitHeight="40.0" fitWidth="40.0" layoutX="793.0" layoutY="22.0" onMouseClicked="#updateUserDetails" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Resources/home/account_circle_white_192x192.png" />
+               </image></ImageView>
+            <Text fill="WHITE" layoutX="413.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADMIN DASHBOARD" wrappingWidth="336.00000673532486">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="25.0" />
                </font>
             </Text>
          </children>
