--- a/WoldCupApp18/src/Views/FXMLStatPlayer.fxml
+++ b/WoldCupApp18/src/Views/FXMLStatPlayer.fxml
@@ -10,17 +10,21 @@
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.Rating?>
 
 <AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLStatPlayerController">
    <children>
-      <Text fx:id="text" layoutX="399.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" wrappingWidth="47.36328125" />
+      <Text fx:id="text" fill="WHITE" layoutX="340.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" wrappingWidth="145.36328125">
+         <font>
+            <Font size="36.0" />
+         </font></Text>
       <TabPane fx:id="tabPane" layoutY="64.0" prefHeight="451.0" prefWidth="839.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="tab1" text="Best Attack">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="384.0" prefWidth="761.0" style="-fx-background-color: #bdc3c7;">
                      <children>
                         <PieChart fx:id="pie" layoutX="99.0" layoutY="36.0" prefHeight="332.0" prefWidth="632.0" />
                      </children>
@@ -29,7 +33,7 @@
           </Tab>
           <Tab fx:id="tab2" text="Most Winner Team">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #bdc3c7;">
                      <children>
                         <PieChart fx:id="pie1" layoutX="112.0" layoutY="36.0" prefHeight="352.0" prefWidth="585.0" />
                      </children></AnchorPane>
@@ -37,7 +41,7 @@
           </Tab>
             <Tab fx:id="tab3" text="Best Player">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #bdc3c7;">
                      <children>
                         <TableView fx:id="table" layoutX="54.0" layoutY="39.0" prefHeight="304.0" prefWidth="237.0">
                           <columns>
@@ -46,12 +50,30 @@
                           </columns>
                         </TableView>
                         <ImageView fx:id="imgPlayer" fitHeight="173.0" fitWidth="205.0" layoutX="592.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
-                        <Label fx:id="name" layoutX="359.0" layoutY="128.0" text="Label" />
-                        <Label fx:id="team" layoutX="359.0" layoutY="156.0" text="Label" />
-                        <Label fx:id="club" layoutX="359.0" layoutY="185.0" text="Label" />
-                        <Label fx:id="age" layoutX="512.0" layoutY="128.0" text="Label" />
-                        <Label fx:id="weight" layoutX="512.0" layoutY="156.0" text="Label" />
-                        <Label fx:id="height" layoutX="512.0" layoutY="185.0" text="Label" />
+                        <Label fx:id="name" layoutX="359.0" layoutY="128.0" text="Label" textFill="#403f3f">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label fx:id="team" layoutX="359.0" layoutY="156.0" text="Label" textFill="#403f3f">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label fx:id="club" layoutX="359.0" layoutY="185.0" text="Label" textFill="#403f3f">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label fx:id="age" layoutX="512.0" layoutY="128.0" text="Label" textFill="#403f3f">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label fx:id="weight" layoutX="512.0" layoutY="156.0" text="Label" textFill="#403f3f">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label fx:id="height" layoutX="512.0" layoutY="185.0" text="Label" textFill="#403f3f">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
                         <Rating fx:id="note" disable="true" layoutX="366.0" layoutY="238.0">
                            <effect>
                               <ColorAdjust contrast="1.0" hue="0.02" saturation="0.14">
